# google-workspace-mcp

./: .env.example  .gitignore  README.md  mcp_google_workspace.py  pyproject.toml  requirements.txt
google_workspace_mcp/: __init__.py  chat.py  cli.py  client.py  common.py  docs.py  server.py  sheets.py  tools.py
tests/: test_google_workspace.py
