[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-workspace-mcp"
version = "0.4.3"
description = "MCP server for Google Docs, Sheets, Drive, and Chat with structured output and optional write scopes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp",
  "requests",
  "google-auth",
  "google-auth-oauthlib",
]

[project.scripts]
google-workspace-mcp = "google_workspace_mcp.cli:main"

[tool.setuptools]
py-modules = ["mcp_google_workspace"]

[tool.setuptools.package-data]
google_workspace_mcp = ["*.json"]

[tool.setuptools.packages.find]
include = ["google_workspace_mcp*"]
